projects/kubernetes/local/pod-volume-test.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: crash-test-pod
spec:
#  initContainers:
#  - name: init
#    image: busybox
#    command: ["/bin/sh", "-c"]
#    args: ["chown -R 1000:1000 /workspace/logs; chmod -R 777 /workspace/logs"]
#    volumeMounts:
#    - name: my-volume
#      mountPath: /workspace/logs

  containers:
  - name: test-container-nginx
    image: nginx
    volumeMounts:
    - name: empty-log-volume
      mountPath: /data
    - name: config-volume-secret-both
      mountPath: /dsg-platform/secrets
  
  volumes:
  - name: empty-log-volume
    emptyDir: {}    
  - name: config-volume-secret-both
    configMap:
      name: configmap-secrets-both-evar
