projects/kubernetes/local/service-loadbalancer-metallb-minikube.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    metallb.io/ip-allocated-from-pool: minikube-pool
  labels:
    app: spring-cloud-petclinic-service
  name: spring-cloud-petclinic-service-deployment
spec:
  allocateLoadBalancerNodePorts: true
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: spring-cloud-petclinic-service
  sessionAffinity: None
  type: LoadBalancer
