projects/kubernetes/local/route-spring-cloud-petclinic-service.yaml
---
apiVersion: networking.k8s.io/v1 
kind: Ingress 
metadata:
  name: route-spring-cloud-petclinic-service
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer
    kubernetes.io/ingress.class: kommander-traefik
    cert-manager.io/duration: 2160h # 90 days
    cert-manager.io/renew-before: 360h # 15 days
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: kommander-traefik
  rules:
  - host: 10.38.207.151.petclinic.service.sslip.io 
    http: 
      paths:
      - backend:
          service:
            name: spring-cloud-petclinic-service
            port:
              number: 8080 #8000
        path: /   # BasePage
        pathType: Prefix
      # - backend:
      #     service:
      #       name: spring-cloud-petclinic-service
      #       port:
      #         number: 8080 #8000
      #   path: /get-config/timeout #/get
      #   pathType: Prefix
      # - backend:
      #     service:
      #       name: spring-cloud-petclinic-service
      #       port:
      #         number: 8080 #8000
      #   path: /get-config/game #/get
      #   pathType: Prefix
      # - backend:
      #     service:
      #       name: spring-cloud-petclinic-service
      #       port:
      #         number: 8080 #8000
      #   path: /get-config/ui #/get
      #   pathType: Prefix
      # - backend:
      #     service:
      #       name: spring-cloud-petclinic-service
      #       port:
      #         number: 8080 #8000
      #   path: /get-secret/from-evar #/get
      #   pathType: Prefix
      # - backend:
      #     service:
      #       name: spring-cloud-petclinic-service
      #       port:
      #         number: 8080 #8000
      #   path: /get-secret/from-file1 #/get
      #   pathType: Prefix
      # - backend:
      #     service:
      #       name: spring-cloud-petclinic-service
      #       port:
      #         number: 8080 #8000
      #   path: /get-secret/from-file2 #/get
      #   pathType: Prefix
      # - backend:
      #     service:
      #       name: spring-cloud-petclinic-service
      #       port:
      #         number: 8080 #8000
      #   path: /actuator #/get
      #   pathType: Prefix
  tls:
  - hosts:
    - 10.38.207.151.petclinic.service.sslip.io 
    secretName: petclinic.service-tls
